# engineer-hiring-tech-exercise

./: .gitignore
python/: README.md  main.py  pyproject.toml
python/src/: crawler.py  main.py  urlhelper.py
python/src/crawler/: Crawler.py  URLHelper.py
python/tests/: test_main.py  test_urlhelper.py
python/tools/dev/: coverage.sh  pre_push.sh
